--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         If you have a Kokoa Account, log in with your email or phone number.
       </p>
     </header>
-    <form id="login-form">
-      <input type="text" placeholder="Email or phone number" />
-      <input type="text" placeholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input name="username" type="text" placeholder="Email or phone number" />
+      <input name="password" type="text" placeholder="Password" />
       <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
 
     <script
-      src="https://kit.fontawesome.com/280208816e.js"
+      src="https://kit.fontawesome.com/a98b8ff89f.js"
       crossorigin="anonymous"
     ></script>
   </body>
