--- a/more.html
+++ b/more.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find - Kokoa Clone</title>
+    <title>More - Kokoa Clone</title>
   </head>
   <body>
     <div class="status-bar">
@@ -23,67 +23,67 @@
     </div>
 
     <header class="screen__header">
-      <h1 class="screen__header__title">Find</h1>
+      <h1 class="screen__header__title">More</h1>
       <div class="screen__header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <span><i class="fas fa-music fa-lg"></i></span>
+        <span
+          ><a href="settings.html"><i class="fas fa-cog fa-lg"></i></a
+        ></span>
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen more-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://avatars3.githubusercontent.com/u/74484217?s=60&v=4"
+            class="user-component_avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Nicolas</h4>
+            <h6 class="user-component__subtitle">
+              +1 787 666 999
+              <span>!</span>
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <i class="far fa-comment-alt fa-2x"></i>
+        </div>
+      </div>
       <div class="icons-row">
         <div class="icons-row__icon">
-          <i class="fas fa-qrcode"></i> <span>QR Code</span>
+          <i class="far fa-calendar"></i> <span>Calendar</span>
         </div>
         <div class="icons-row__icon">
-          <i class="far fa-address-book"></i><span>Add by Contacts</span>
+          <i class="far fa-smile-beam"></i><span>Talk Drive</span>
         </div>
         <div class="icons-row__icon">
-          <i class="fas fa-fingerprint"></i><span>Add by ID</span>
+          <i class="fas fa-paint-roller"></i><span>Emotions</span>
         </div>
         <div class="icons-row__icon">
-          <i class="far fa-envelope"></i><span>Invite</span>
+          <i class="fas fa-file-invoice-dollar"></i><span>Themes</span>
         </div>
       </div>
-      <div class="recommanded-friends">
-        <h6 class="recommended-friends__title">Recommanded Friends</h6>
-        <span>You have no recommended friends</span>
-      </div>
-      <div class="open-chat">
-        <div class="open-chat__header">
-          <h4>Open Chat</h4>
-          <span
-            >Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i
-          ></span>
-        </div>
-        <div class="open-post">
-          <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#firends</h6>
-            <div class="open-post__members">
-              <img
-                src="https://avatars3.githubusercontent.com/u/74484217?s=60&v=4"
-              />
-              <span class="open-post__member-count">802 members</span>
-              <div class="divider"></div>
-              <span class="open-post__members-status">Active</span>
+      <div class="more-suggestions">
+        <h4 class="more-suggestions__title">Suggestions</h4>
+        <div class="more-suggestions__icons">
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__ico-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggest__icons-text"> Kokoa Story </span>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img
-                src="https://avatars3.githubusercontent.com/u/74484217?s=60&v=4"
-              />
-              <div class="open-post__heart-count">
-                <i class="fas fa-heart fa-xs"></i>
-                <span>326</span>
-              </div>
+          <div class="more-suggestions__icon">
+            <div class="more-suggestions__ico-image">
+              <i class="fas fa-quote-right"></i>
             </div>
+            <span class="more-suggest__icons-text"> Kokoa Story </span>
           </div>
         </div>
       </div>
     </main>
-
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
