--- a/chat.html
+++ b/chat.html
@@ -71,6 +71,11 @@
         </button>
       </div>
     </form>
+
+    <div id="no-mobile">
+      <span>yYour screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a98b8ff89f.js"
       crossorigin="anonymous"
