--- a/friends.html
+++ b/friends.html
@@ -104,6 +104,13 @@
         </li>
       </ul>
     </nav>
+    <div id="splash-screen">
+      <i class="fas fa-comment fa-2x"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>yYour screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/a98b8ff89f.js"
       crossorigin="anonymous"
