--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
       <input type="submit" value="Log In" />
       <a href="#">Find Kakao Account or Password</a>
     </form>
+
+    <div id="no-mobile">
+      <span>yYour screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/a98b8ff89f.js"
       crossorigin="anonymous"
