--- a/more.html
+++ b/more.html
@@ -110,6 +110,9 @@
         </li>
       </ul>
     </nav>
+    <div id="no-mobile">
+      <span>yYour screen is too big ㅠㅠ</span>
+    </div>
     <script
       src="https://kit.fontawesome.com/a98b8ff89f.js"
       crossorigin="anonymous"
