--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </form>
 
     <div id="no-mobile">
-      <span>yYour screen is super big ㅠㅠ</span>
+      <span>yYour screen is super big </span>
     </div>
 
     <script
